--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="rockPaperScissor.js"></script>
+  <script src="backpack.js"></script>
 </body>
 </html>
